--- a/views/rap.html
+++ b/views/rap.html
@@ -1,12 +1,3 @@
-<!-- This is a static file -->
-<!-- served from your routes in server.js -->
-
-<!-- You might want to try something fancier: -->
-<!-- html/nunjucks docs: https://mozilla.github.io/nunjucks/ -->
-<!-- pug: https://pugjs.org/ -->
-<!-- haml: http://haml.info/ -->
-<!-- hbs(handlebars): http://handlebarsjs.com/ -->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -21,7 +12,7 @@
   <body>
     <header>
       <h1>
-        Timestamp Microservice
+        Rap Life
       </h1>
     </header>
 
@@ -31,7 +22,7 @@
         <ul id="dreams">
         </ul>
       </section>
-      <a href='/tupac'>Live the dream.</a>
+      <a href='/'>Back to la-la land.</a>
     </main>
 
     <footer>
